--- a/_config.html
+++ b/_config.html
@@ -1,9 +1,8 @@
 # Site settings
 title: IAU E Division Sun and Heliosphere Presentation Files
-description: "Every failure is leading towards success."
-url: "http://IAUE2018.github.io"          # your host, for absolute URL
+url: "http://IAUE2018files.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/njuiaue/IAUE2018.github.io.git" # you code repository
+github_repo: "https://github.com/njuiaue/IAUE2018files.github.io.git" # you code repository
 
 
 # Progressive Web Apps
